--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "express-fileupload": "1.5.0",
     "express-session": "^1.17.2",
     "hbs": "^4.2.0",
     "morgan": "^1.10.0",
