--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "1.7.2",
+    "jest": "^27.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-player": "2.16.0",
@@ -17,6 +18,7 @@
     "react-yandex-maps": "^4.6.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-mock-store": "1.5.4",
     "redux-saga": "^1.1.3",
     "router": "^1.3.6",
     "uuid": "^8.3.2",
